feat: [스트림] 다양한 stream method 실습 구현